Update taro react ts

--- a/Web/3.JS/30-ES6.md
+++ b/Web/3.JS/30-ES6.md
@@ -10,6 +10,19 @@ sort:
 let a = 404;
 // 不可修改
 const a = 4;
+
+let s1 = Symbol('same')
+let s2 = Symbol('same')
+s1 === s2		// false
+
+// Symbol为变量赋值
+let obj = {
+  [Symbol('name')]: 'fzf',
+  age: 18
+}
+Object.keys(obj);
+Object.getOwnPropertySymbols(obj);
+Reflect.ownKeys(obj);
 ```
 
 ## 箭头函数
