--- a/DeepLearn/00-数学基础.md
+++ b/DeepLearn/00-数学基础.md
@@ -3,6 +3,8 @@ title: 00-数学基础
 sort: 
 --> 
 
+## 高数
+
 导数: $f'(x_0) = \lim_{\Delta x\to0}\frac{f(x_0+\Delta x)}{\Delta x}$
 
 导数运算1: $(uv)' = uv'+v'u$
@@ -12,3 +14,22 @@ sort:
 切线方程: $y-y_0 = {f'(x_0)}(x-x_0)$
 
 法线方程: $y-y_0 = -\frac{1}{f'(x_0)}(x-x_0)$
+
+莱布尼茨公式: $(uv)^2 = \sum^n_{i=0} C^i_n u^i v^{n-i}$
+
+### 泰勒公式
+
+> 用多项式函数, 近似一个复杂函数
+>
+> $f(x)=f(0)+{f}'(0)x+\frac{1}{2!}{f}''(0){{x}^{2}}+\cdots +\frac{{{f}^{(n)}}(0)}{n!}{{x}^{n}}+{{R}_{n}}$
+
+### 曲率
+
+> 曲线上无限接近的两个点，构成圆的半径就被定义为曲线在这一点的曲率半径
+>
+> **曲率被定义为曲率半径的倒数.**
+>
+> $k=\frac{\left| y'' \right|}{{{(1+y{{'}^{2}})}^{\tfrac{3}{2}}}}$
+
+## 线代
+
