--- a/Golang/05-常用库.md
+++ b/Golang/05-常用库.md
@@ -136,3 +136,17 @@ name := ctx.PostForm("name")
 ## bcypt
 
 > `go get golang.org/x/crypto/bcrypt`
+
+## net
+
+- http
+
+```go
+resp, err := http.Get(url)
+if err != nil {
+  log.Print("HTTP GET ERROR", err)
+  return
+}
+raw, err := ioutil.ReadAll(resp.Body)
+```
+
