✨ Torch & Android & Math

--- a/DeepLearn/01-数学基础.md
+++ b/DeepLearn/01-数学基础.md
@@ -1,7 +1,11 @@
 <!-- 
-title: 00-数学基础
+title: 01-数学基础
 sort: 
 --> 
+
+均方差: $\frac1n \sum_{i=1}^n (y - y_{label})^2 $
+
+均方根差: $\sqrt{ \frac1n \sum_{i=1}^n (y - y_{label})^2 }$
 
 ## 高数
 
@@ -10,6 +14,16 @@ sort:
 导数运算1: $(uv)' = uv'+v'u$
 
 导数运算2: $(\frac uv)' = \frac{uv'-v'u}{v^2}$
+
+偏微分: 
+
+$f=(y-(xw+b))^2$
+
+$\frac{\partial f}{\partial w} = 2(y-g())\frac{\partial h}{\partial w} = 2(y-(xw+b))x \tag 1$
+
+$\frac{\partial f}{\partial b} = 2(y-g())\frac{\partial h}{\partial b} = 2(y-(xw+b)) \tag 2$
+
+$\nabla = ((1)+(2))$
 
 切线方程: $y-y_0 = {f'(x_0)}(x-x_0)$
 
