--- a/Web/3.JS/20-JS入门.md
+++ b/Web/3.JS/20-JS入门.md
@@ -24,9 +24,10 @@ sort:
 // 写入html
 document.write("<h1>这是一个标题</h1>");
 // 修改html
-x=document.getElementById("demo");  //查找元素
-x.innerHTML="Hello JavaScript";    //改变内容
-x.style.color="#ff0000";           //改变样式
+x=document.getElementById("demo");  // 查找元素
+x=document.querySelector("#demo");  // 查找元素
+x.innerHTML="Hello JavaScript";    	// 改变内容
+x.style.color="#ff0000";           	// 改变样式
 
 // 处理事件
 <button type="button" onclick="alert('欢迎!')">点我!</button>
