--- a/Web/3.JS/21-JS基础.md
+++ b/Web/3.JS/21-JS基础.md
@@ -32,17 +32,17 @@ Infinity
 ## 变量
 
 ```js
-var x, len;
-x = 5;
-len = 404;
+var obsolete;
+let recommend;
+const constant;
 ```
 
 ### 字符串
 
 ```js
 // 字符串
-var txt = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-var sln = txt.length;
+let txt = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+let sln = txt.length;
 
 // 多行字符串
 `这是一个
@@ -50,9 +50,9 @@ var sln = txt.length;
 字符串`
 
 // 连接
-var name = '小明';
-var age = 20;
-var message = `你好, ${name}, 你今年${age}岁了!`;
+let name = '小明';
+let age = 20;
+let message = `你好, ${name}, 你今年${age}岁了!`;
 
 // 转义
  "We are the so-called \"Vikings\" from the north."
@@ -60,7 +60,7 @@ var message = `你好, ${name}, 你今年${age}岁了!`;
 '\x41'; // Unicode 完全等同于 'A'
 
 // 变成对象
-var y = new String("John");
+let y = new String("John");
 # 不要创建 String 对象。它会拖慢执行速度，并可能产生其他副作用
 ```
 
@@ -107,7 +107,7 @@ decodeURIComponent(atob("JUU0JUJEJUEwJUU1JUE1JUJE"));
 - 例子
 
 ```js
-var x = "JohnJohn";              // x 是字符串
+let x = "JohnJohn";              // x 是字符串
 y = x.charAt(2); // h
 y = x.charCodeAt(2); // 104
 y = x.concat(y, y); // JohnJohn104104, x+y+y
@@ -132,7 +132,6 @@ var arr = [1, 2, 3];
 arr.length; // 3
 // 修改长度
 arr.length = 6;	// arr变为[1, 2, 3, undefined, undefined, undefined]
-arr.length = 2;	// arr变为[1, 2]
 arr[5] = 'x';	// arr变为[1, 2, undefined, undefined, undefined, 'x']
 
 var arr = [10, 20, '30', 'xyz'];
@@ -147,7 +146,7 @@ arr.slice(0, 3); // 从索引0开始，到索引3结束，但不包括索引3: [
 arr.slice(3); // 从索引3开始到结束: ['D', 'E', 'F', 'G']
 
 // push pop unshift shift
-压入，取出，头部添加，取出
+arr.push('demo')
 
 // sort 排序
 // reverse	反转
