--- a/DeepLearn/02-常用函数.md
+++ b/DeepLearn/02-常用函数.md
@@ -1,4 +1,4 @@
-<!-- 
+ <!-- 
 title: 02-常用函数
 sort: 
 --> 
@@ -7,25 +7,21 @@ sort:
 
 ![image-20210130161646295](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/image-20210130161646295.png)
 
-## 代价函数`Cost`
-
-> 训练代价函数得到参数w和b
-
-## 损失函数`Lose`
+### 损失函数`Lose`
 
 > 衡量输出值与输入值的损失
 >
-> $loss=(wx+b-y)^2$
-
-## 分析函数
+> $loss=(wx+b-y)^2$ 
 
 ### Softmax
 
-$$ S_{i} = \frac{e^i}{\sum_{j}e^j} $$
-
 > `归一化指数函数`
 >
-> 过滤过大或过小的数据
+> 将数据转变成相加为1的概率
+
+$$ S_{i} = \frac{e^i}{\sum_{j}e^j} $$
+
+
 
 
 
