🚀 Puppeteer & Sqlmap & Vue & torch

--- a/Linux/12-实用工具.md
+++ b/Linux/12-实用工具.md
@@ -45,3 +45,12 @@ sort:
 ## [nvdu](https://github.com/rofl0r/ncdu)
 
 > `apt install ncdu`
+
+### 代码行数统计
+
+> `https://github.com/AlDanial/cloc`
+
+```
+cloc <path>
+```
+
