🚒 Express & Vuex & Puppeteer

--- a/DeepLearn/02-常用函数.md
+++ b/DeepLearn/02-常用函数.md
@@ -7,6 +7,20 @@ sort:
 
 ![image-20210130161646295](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/image-20210130161646295.png)
 
+- Leaky ReLU
+
+![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/u=2147037458,4155023785&fm=26&gp=0.jpg)
+
+- SELU
+
+  ![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/u=2448423465,3835849782&fm=11&gp=0.jpg)
+
+- softplus
+
+  ![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/u=2661888347,1277836998&fm=11&gp=0.jpg)
+
+  
+
 ### 损失函数`Lose`
 
 > 衡量输出值与输入值的损失
