--- a/DeepLearn/05-梯度下降.md
+++ b/DeepLearn/05-梯度下降.md
@@ -6,6 +6,10 @@ sort:
 > 梯度下降求解方程的wb值
 >
 > $loss = \sum_{i}(wx + b - y)^2$
+>
+> 标准梯度下降法(GD, Gradient Descent)
+>
+> 随机梯度下降法(SGD, Stochastic Gradient Descent)
 
 ## 梯度计算
 
