--- a/Web/3.JS/20-JS入门.md
+++ b/Web/3.JS/20-JS入门.md
@@ -5,19 +5,15 @@ sort:
 
 # JavaScript入门
 
-## 理论
+## 常用功能
 
-> embedded语言，一切API由host提供
->
-> 最出名的是node，常见浏览器
+```js
+// 对象转字符串
+JSON.stringify(obj)
+// 字符串转对象
+JSON.parse(str)
+```
 
-### API
-
-> 浏览器提供
->
-> - 浏览器控制类
-> - DOM类
-> - Web类
 ## 用途
 
 ```javascript
