🛹 Visdom & Ham & DropOut

--- a/DeepLearn/02-常用函数.md
+++ b/DeepLearn/02-常用函数.md
@@ -21,11 +21,17 @@ sort:
 
   
 
-### 损失函数`Lose`
+## 损失函数
 
 > 衡量输出值与输入值的损失
 >
 > $loss=(wx+b-y)^2$ 
+
+| torch.nn         | torch.nn.functional (F) | 公式                          |
+| :--------------- | :---------------------- | ----------------------------- |
+| CrossEntropyLoss | cross_entropy           | $−\sum_{k=1}^N(p_k∗\log q_k)$ |
+| LogSoftmax       | log_softmax             |                               |
+| NLLLoss          | nll_loss                | $f(x,class)=−x[class]$        |
 
 ### Softmax
 
@@ -33,9 +39,17 @@ sort:
 >
 > 将数据转变成相加为1的概率
 
-$$ S_{i} = \frac{e^i}{\sum_{j}e^j} $$
+$ S_{i} = \frac{e^i}{\sum_{j}e^j} $
 
-### 检验优化算法
+### LogSoftmax
+
+> **log**和**softmax**合并执行
+
+### CrossEntropyLoss
+
+> 交叉熵
+
+## 检验优化算法
 
 - Himmelblau
 
