🚀 React & Hooks & Router

--- a/Web/5.React/05-脚手架.md
+++ b/Web/5.React/05-脚手架.md
@@ -4,19 +4,17 @@ sort:
 --> 
 
 ```bash
+npx create-react-app my-tabs
+
 src
 |_ App.css
 |_ App.js
 |_ index.js
-|_ App.js
-|_ App.js
 ```
 
 ## Sass
 
-> css扩展
->
-> `Syntactically Awesome Style Sheets`
+> `yarn add sass -S`
 
 ```scss
 body {
