🚨 卷积网络 & Arm汇编 & Redux

--- a/HardWare/STM32/00-STM32配置.md
+++ b/HardWare/STM32/00-STM32配置.md
@@ -1,5 +1,5 @@
 <!-- 
-title: 01-STM32配置
+title: 00-STM32配置
 sort: 
 --> 
 
@@ -11,11 +11,13 @@ sort:
 
 ![image-20201031193923530](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201031193923.png)
 
-## keil5安装
+## CubeIDE
 
-下载地址：[提取码：ybg7 ](https://pan.baidu.com/s/1HwwezJ_fir30u9f8Lnj5TQ)
+> stm32官方的免费IDE
+>
+> 集成了CubeMx
 
-> 如何安装破解就需要你问度娘啦，锻炼一下独立自主能力。
+## keil5
 
 #### 芯片包
 
