--- a/HardWare/STM32/03-库函数点灯.md
+++ b/HardWare/STM32/03-库函数点灯.md
@@ -7,42 +7,15 @@ title: 03-库函数点灯
 sort: 
 --> 
 
-> 共通协议CMSIS
-
-![image-20201202203308361](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201202203315.png)
-
-## 库函数说明
-
-### `stm32f10x_it`
-
-> 中断
-
-### `stm32f10x_conf`
-
-> 配置
->
-> 包含所有外设的头文件
-
-### `stm32f10x_<ppp>`
-
-> 外设程序
->
-> `stm32f10x_gpio`
-
-### `misc`
-
-> `NVIC`：中断控制器
->
-> `SysTick`：系统滴答定时器
-
-### `startup_stm32f10x_md`
-
-> 启动文件
+> 使用CubeIDE
 
 ## 代码
 
 ```c
-HAL_GPIO_TogglePin(GPIOC, GPIO_PIN_13);
-HAL_Delay(50);
+while (1)
+{
+	HAL_GPIO_TogglePin(GPIOC, GPIO_PIN_13);
+	HAL_Delay(50);
+}
 ```
 
