👏 Yolov5 & Flutter & RNN

--- a/DeepLearn/14-卷积神经网络.md
+++ b/DeepLearn/14-卷积神经网络.md
@@ -55,3 +55,60 @@ out = F.interpolate(img.T, scale_factor = 0.5, mode = 'nearest')
 plt.imshow(out.T)
 ```
 
+### BatchNorm
+
+> 处理数据区间
+
+```python
+x = torch.rand(100,16,784)
+layer = nn.BatchNorm1d(16)
+out = layer(x)
+```
+
+## 多层网络
+
+### 网络结构
+
+> 使用nn.Module定义网络
+
+```python
+from torch import nn
+
+net = nn.Sequential(
+    nn.Linear(4, 2),  # 输入维度4*2,输出维度2的线性层
+    nn.Linear(2, 2)  # 输入维度2*2,输出维度2的线性层
+)
+# 使用优化器
+optimizer = optim.SGD(net.parameters(), lr=learning_rate)
+```
+
+#### 树形结构
+
+```python
+from torch import nn
+
+# 定义基础网络
+class BaseNet(nn.Module):
+
+    def __init__(self):
+        super(BaseNet, self).__init__()
+        self.net = nn.Linear(4, 3)
+
+    def forward(self, x):
+        return self.net(x)
+
+
+class MyNet(nn.Module):
+
+    def __init__(self):
+        super(MyNet, self).__init__()
+        # 使用BaseNet
+        self.net = nn.Sequential(
+            BaseNet(),
+            nn.ReLU(),
+            nn.Linear(3, 2)
+        )
+    def forward(self, x):
+        return self.net(x)
+```
+
