🍕 CPP & RNN & Chart.js

--- a/C/05-数组与指针.md
+++ b/C/05-数组与指针.md
@@ -134,6 +134,16 @@ int *p = (int*)&data;
    int * const ptr;
    // ptr 不可以指向别的地址
    ```
+### 引用
+
+> 变量的一个别名
+
+```c
+int a;
+int& p = a;
+int& func(int& a){}
+```
+
 ### 多维数组
 
 ```c
