--- a/Web/4.Vue/10-实战.md
+++ b/Web/4.Vue/10-实战.md
@@ -39,19 +39,19 @@ export default {
 ```js
 import Vue from 'vue'
 import Router from 'vue-router'
-import Home from '@/pages/Home'
+import router from "./router";
+import store from './store’
+
 
 Vue.use(Router)
 
-export default new Router({
-  routes: [
-		{
-      path: '/',
-      name: 'Home',
-      component: Home
-    }
-  ]
-})
+new Vue({
+  el: "#app",
+  router,
+  store,
+  components: { App },
+  template: "<App/>"
+});
 
 ```
 
@@ -112,7 +112,43 @@ export default {
 </script>
 ```
 
-5. 编写Store: `/src/store/index.js`
+5. 编写Router: `/src/router/index.js`
+
+```js
+import Vue from "vue";
+import Router from "vue-router";
+
+import Home from "@/pages/Home";
+import Cart from "@/pages/Cart";
+import Detail from "@/pages/Detail";
+
+Vue.use(Router);
+
+const router = new Router({
+  routes: [
+    {
+      path: "/",
+      name: "Home",
+      component: Home
+    },
+    {
+      path: "/cart",
+      name: "Cart",
+      component: Cart
+    },
+    {
+      path: "/detail/:id",
+      name: "Detail",
+      component: Detail
+    }
+  ]
+});
+
+export default router;
+
+```
+
+6. 编写Store: `/src/store/index.js`
 
 ```js
 import Vue from 'vue'
