--- a/Golang/05-常用库.md
+++ b/Golang/05-常用库.md
@@ -15,13 +15,13 @@ sort:
 func InitConfig() {
 	// 设置配置文件信息
 	viper.SetConfigName("config")
-	viper.SetConfigType("toml")
+	viper.SetConfigType("yaml")
 	// 搜索路径
 	viper.AddConfigPath("./config")
 	// 自动根据类型来读取配置
 	err := viper.ReadInConfig()
 	if err != nil {
-		log.Fatal("read config failed: %v", err)
+		log.Fatal("read config failed: ", err)
 	}
 	// 读取信息
 	viper.Get("mysql.host")
