--- a/Web/4.Vue/10-实战.md
+++ b/Web/4.Vue/10-实战.md
@@ -6,6 +6,8 @@ sort:
 ```bash
 npm install -g vue-cli
 vue init webpack demo
+yarn add node-sass sass-loader
+yarn add sass-loader@^10.1.1
 ```
 
 ## 步骤
