--- a/Command/Dos/01-常用符号.md
+++ b/Command/Dos/01-常用符号.md
@@ -6,11 +6,11 @@ sort:
 
 ## @    命令行回显
 
-- 屏蔽当前行的回显
+> 屏蔽当前行的回显
 
-  ```powershell
-  @echo off
-  ```
+```powershell
+@echo off
+```
 
 ## \>    重定向符
 
