--- a/Golang/05-常用库.md
+++ b/Golang/05-常用库.md
@@ -25,8 +25,11 @@ func InitConfig() {
 	}
 	// 读取信息
 	viper.Get("mysql.host")
-  // 设置值
-  viper.Set("redis.port", 5381)
+	// 设置值
+	viper.Set("redis.port", 5381)
+	viper.WriteConfig()
+    // 自动重新加载配置文件
+    viper.WatchConfig()
 }
 ```
 
@@ -75,7 +78,7 @@ func main() {
   // 全部
   DB.Where("name = ?", name).Find(&users)
   // 模糊查询
-	db.Where("name LIKE ?", "%name%").Find(&users)
+	db.Where("name LIKE ?", "%"+name+"%").Find(&users)
 
   // Update - 将 newUser 的 price 更新为 200
   db.Model(&newUser).Update("Password", "1234")
