--- a/Golang/02-实战.md
+++ b/Golang/02-实战.md
@@ -10,7 +10,7 @@ sort:
 mkdir goLearn
 cd goLearn
 # 使用mod管理依赖
-go mod init fzf404/goLearn 
+go mod init goLearn 
 # 安装gin框架
 go get -u github.com/gin-gonic/gin
 ```
