--- a/Web/4.Vue/10-实战.md
+++ b/Web/4.Vue/10-实战.md
@@ -6,8 +6,7 @@ sort:
 ```bash
 npm install -g vue-cli
 vue init webpack demo
-yarn add node-sass sass-loader
-yarn add sass-loader@^10.1.1
+yarn install sass-loader@7.3.1 node-sass@4.14.1 --save-dev 
 ```
 
 ## 步骤
@@ -41,20 +40,62 @@ export default {
 ```js
 import Vue from 'vue'
 import Router from 'vue-router'
-import router from "./router";
-import store from './store’
-
+import store from '@/store'
+import userRoutes from './module/user'
 
 Vue.use(Router)
 
-new Vue({
-  el: "#app",
-  router,
-  store,
-  components: { App },
-  template: "<App/>"
-});
+const routes = [
+  {
+    path: '/',
+    name: 'Home',
+    component: () => import('../pages/Home.vue')
+  },
+  ...muserRoutes,
+  {
+    path: '*',
+    name: '404',
+    component: () => import('../pages/404.vue')
+  }
+]
 
+const router = new Router({
+  routes
+})
+router.beforeEach((to, from, next) => {
+  if (to.meta.auth) {
+    if (store.state.userModule.token) {
+      next()
+    } else {
+      router.push({ name: 'Home' })
+    }
+  } else {
+    next()
+  }
+})
+
+export default router
+```
+
+`/src/router/module/user.js`
+
+```js
+const manageRoutes = [
+  {
+    path: '/login',
+    name: 'Login',
+    component: () => import('@/pages/Login.vue')
+  }, {
+    path: '/info',
+    name: 'Info',
+    meta: {
+      auth: true
+    },
+    component: () => import('@/pages/Info.vue')
+  }
+]
+
+export default manageRoutes
 ```
 
 3. 首页链接: `/src/app.vue`
@@ -67,87 +108,46 @@ new Vue({
         <router-link to="/">Home</router-link>
       </li>
       <li>
-        <router-link to="/admin">Admin</router-link>
+        <router-link to="/login">Login</router-link>
       </li>
     </ul>
   </div>
 </nav>
 ```
 
-4. 编写组件: `/src/components/xx.vue`
-
-```vue
-<script>
-export default {
-  name: 'product-list',
-  // 生命周期
-  created () {
-    if (this.products.length === 0) {
-      // 触发store的action
-      this.$store.dispatch('allProducts')
-    }
-  },
-  // 使用store传递参数
-  computed: {
-    products () {
-      // 取state
-      // return this.$store.state.products
-      // 调用action
-     	return this.$store.getters.allProducts
-    }
-  },
-  // 从父组件获得data
-  // props: ['model', 'manufacturers', 'isEditing'],
-  methods: {
-    // 触发父组件方法
-    saveProduct () {
-      // this.$emit('save-product', this.model)
-    },
-    // 触发Store的方法
-    addToCart (product) {
-      this.$store.commit('ADD_TO_CART', {
-        product
-      })
-    }
-  }
-}
-</script>
-```
-
-5. 编写Router: `/src/router/index.js`
+4. 编写reuqest: `/src/utils/request.js`
 
 ```js
-import Vue from "vue";
-import Router from "vue-router";
+import axios from 'axios'
+import storageService from '../service/storageService'
 
-import Home from "@/pages/Home";
-import Cart from "@/pages/Cart";
-import Detail from "@/pages/Detail";
+const service = axios.create({
+  baseURL: '/api',
+  timeout: 1000 * 3
+})
+// 使用中间件
+service.interceptors.request.use((config) => {
+  Object.assign(config.headers, { Authorization: `Bearer ${storageService.get(storageService.USER_TOKEN)}` })
+  return config
+}, (error) => (Promise.reject(error)))
 
-Vue.use(Router);
+export default service
+```
 
-const router = new Router({
-  routes: [
-    {
-      path: "/",
-      name: "Home",
-      component: Home
-    },
-    {
-      path: "/cart",
-      name: "Cart",
-      component: Cart
-    },
-    {
-      path: "/detail/:id",
-      name: "Detail",
-      component: Detail
-    }
-  ]
-});
+5. 编写Service: `/src/service/userService.js`
 
-export default router;
+```js
+import request from '@/utils/request.js'
+import qs from 'qs'
 
+// 用户登录
+const login = ({ name, password }) => (request.post('login', qs.stringify({ name, password })))
+// 获取用户信息
+const info = () => (request.post('userinfo'))
+export default {
+  login,
+  info
+}
 ```
 
 6. 编写Store: `/src/store/index.js`
@@ -155,42 +155,91 @@ export default router;
 ```js
 import Vue from 'vue'
 import Vuex from 'vuex'
-import axios from 'axios'
-
-const API_BASE = 'http://127.0.0.1:3000/api/v1/'
+import userModule from './module/user'
 
 Vue.use(Vuex)
 
 export default new Vuex.Store({
-  // 只有mutations能修改state的值
-  strict: true,
-  // 全部数据
+  strict: process.env.NODE_ENV !== 'production',
   state: {
-		cart: [],
-    product: []
   },
-  // 修改state值的函数
   mutations: {
-    ADD_TO_CART (state, payload) {
-      const { product } = payload
-      state.cart.push(product)
-    },
   },
-  // 异步操作
   actions: {
-    allProducts ({ commit }) {
-      // 调用mutations
-      commit('ADD_TO_CART')
-			// 发送异步请求
-      axios.get(`${API_BASE}/products`).then(response => {
-        console.log('response', response)
-        // 再次调用mutations
-        commit('ADD_TO_CART', {
-          products: response.data
-        })
-      })
-    }
+  },
+  modules: {
+    userModule,
   }
 })
+```
+
+`/src/store/module/user.js`
+
+```js
+import storageService from '@/service/storageService'
+import userService from '@/service/userService'
+
+const userModule = {
+  namespaced: true,
+  state: {
+    token: storageService.get(storageService.USER_TOKEN),
+    userInfo: storageService.get(storageService.USER_INFO) ? JSON.parse(storageService.get(storageService.USER_INFO)) : null, //eslint-disable-line
+  },
+  mutations: {
+    SET_TOKEN (state, token) {
+      // 更新本地缓存
+      storageService.set(storageService.USER_TOKEN, token)
+      // 更新state
+      state.token = token
+    },
+    SET_USERINFO (state, userInfo) {
+      // 更新本地缓存
+      storageService.set(storageService.USER_INFO, JSON.stringify(userInfo))
+      // 更新state
+      state.userInfo = userInfo
+    }
+  },
+  actions: {
+
+    login (context, { name, password }) {
+      return new Promise((resolve, reject) => {
+        
+          /userService.login({ name, password }).then((res) => {
+          // 判断登录状态
+          alert(res.data.msg)
+          if (res.data.code !== 200) {
+            return
+          }
+          // 保存token
+          context.commit('SET_TOKEN', res.data.data.token)
+          // 获取用户和信息
+          return userService.info()
+        }).then((res) => {
+          // 保存用户信息
+          context.commit('SET_USERINFO', res.data.data.user)
+          resolve(res)
+        }).catch((err) => {
+          reject(err)
+        })
+      })
+    },
+    getuserinfo () {
+      return this.state.userInfo
+    },
+    logout ({ commit }) {
+      // 清除token
+      commit('SET_TOKEN', '')
+      storageService.set(storageService.USER_TOKEN, '')
+      // 清除用户信息
+      commit('SET_USERINFO', '')
+      storageService.set(storageService.USER_INFO, '')
+
+      window.location.reload()
+    }
+  }
+}
+
+export default userModule
+
 ```
 
