✈ Node-Red Qt MQTT

--- a/HardWare/Arduino/05-串口通信.md
+++ b/HardWare/Arduino/05-串口通信.md
@@ -18,7 +18,7 @@ Serial.println(val);
 ## 串口输入
 
 ```cpp
-Serial.read();
+Serial.read();		// 读取一个字节
 Serial.available();	// 返回缓冲区接收到的字节数
 if(Serial.available()>0)
   {
