--- a/Security/Crack/10-扫雷注入.md
+++ b/Security/Crack/10-扫雷注入.md
@@ -3,6 +3,8 @@ title: 10-扫雷注入实例
 sort: 
 --> 
 
+## 过程
+
 `C:\WINDOWS\system\winmine.exe`
 
 1. 查找主窗口
@@ -39,7 +41,13 @@ LRESULT CALLBACK WindowProc(
 
 ![image-20210429151417779](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210429151425.png)
 
-4. 注入代码
+4. 使用CE查找地址
+
+> 剩余雷数：`0x01005194`
+>
+> 累计时间：`0x0100579C`
+
+5. 注入代码
 
 ```assembly
 push 0			; lparam
@@ -50,4 +58,40 @@ call 0x01001BC9	; 调用处理函数
 ```
 
 ![image-20210429152827679](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210429152858.png)
+
+## 调用WinAPI开发外挂
+
+```cpp
+#include "windows.h"
+
+HWND hWnd;    // 窗口句柄
+DWORD pid;    // 进程ID
+HANDLE hProcess;    // 进程句柄
+
+// 获得窗口句柄
+hWnd = ::FindWindow(NULL,"扫雷");
+if( !hWnd ){
+    QMessageBox::critical(this, "提示", "游戏未打开");
+    return;
+}
+
+// 获得进程ID并获得句柄
+GetWindowThreadProcessId(hWnd,&pid);
+hProcess = ::OpenProcess(PROCESS_ALL_ACCESS,FALSE,pid);
+if( !hProcess ){
+    QMessageBox::critical(this, "提示", "游戏进程打开失败");
+    return;
+}
+
+// 触发初、中、高级菜单
+::SendMessageA(hWnd,WM_COMMAND,0x209,0);
+
+// 读内存
+int mines_num;
+::ReadProcessMemory(hProcess,(LPCVOID)0x01005194,&mines_num,sizeof(mines_num),&pid);
+
+// 写内存
+int new_mines_num = new_mines.toInt();
+::WriteProcessMemory(hProcess,(LPVOID)0x01005194,&new_mines_num,sizeof(new_mines_num),&pid);
+```
 
