--- a/DeepLearn/31-五子棋AI.md
+++ b/DeepLearn/31-五子棋AI.md
@@ -3,10 +3,16 @@ title: 31-五子棋AI
 sort: 
 -->
 
-- 蒙特卡洛
+蒙特卡洛方法
 
   > 随机点估算不规则图形面积
 
-- 蒙特卡洛树搜索(MCTS)
 
-  > 
+### 蒙特卡洛树搜索(MCTS)
+
+  > UCT公式
+  >
+  > 计算结果的可信度
+  >
+  > $\frac{w_i}{n_i}+c*\sqrt{\frac{ln+N_i}{n_i}}$
+
