--- a/Security/Crack/10-扫雷注入.md
+++ b/Security/Crack/10-扫雷注入.md
@@ -59,6 +59,20 @@ call 0x01001BC9	; 调用处理函数
 
 ![image-20210429152827679](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210429152858.png)
 
+6. CE查内存
+
+> 雷区：`0x01005361 - 0x01005661`
+>
+> `char board[24][32]`
+>
+> 宽度地址：`0x01005334`
+>
+> 高度地址：`0x01005338`
+>
+> 雷数地址：`0x01005330`
+
+![](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504112952.png)
+
 ## 调用WinAPI开发外挂
 
 ```cpp
@@ -93,5 +107,10 @@ int mines_num;
 // 写内存
 int new_mines_num = new_mines.toInt();
 ::WriteProcessMemory(hProcess,(LPVOID)0x01005194,&new_mines_num,sizeof(new_mines_num),&pid);
+
+// 模拟点击
+::PostMessage(hWnd, WM_LBUTTONDOWN, MK_LBUTTON, *(int *)boxXY);
+::PostMessage(hWnd, WM_LBUTTONUP, 0, *(int *)boxXY);
 ```
 
+![](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504112935.png)
