🙌 Fix Some Error

--- a/DeepLearn/31-五子棋AI.md
+++ b/DeepLearn/31-五子棋AI.md
@@ -3,16 +3,27 @@ title: 31-五子棋AI
 sort: 
 -->
 
-蒙特卡洛方法
+### 博弈树
+
+> 行动-move
+>
+> 分支节点-branch
+>
+> 端节点-terminal
+
+![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210506125934.jpeg)
+
+## 蒙特卡洛
 
   > 随机点估算不规则图形面积
 
-
 ### 蒙特卡洛树搜索(MCTS)
 
-  > UCT公式
-  >
-  > 计算结果的可信度
-  >
-  > $\frac{w_i}{n_i}+c*\sqrt{\frac{ln+N_i}{n_i}}$
+> 随机选择子节点筛选，当寻找到最优节点时记录。
+
+- UCT公式
+
+  计算结果的可信度
+
+  $\frac{w_i}{n_i}+c*\sqrt{\frac{ln+N_i}{n_i}}$
 
