--- a/Golang/01-go入门.md
+++ b/Golang/01-go入门.md
@@ -63,13 +63,28 @@ for index,data := range str{
 
 ```go
 // 数组
-var a = [3]int{1,2,3}
-a := [3]int{1,2,3}
+var a [3]int
+a := [3]int{1,2,3}	// 复合字面值初始化
+a := [...]string{
+    "123",
+    "234",
+    "345"
+}
+
+// 循环遍历
+for i :=0 ; i < len(a); i++ {
+    fmt.Print;n(a[i])
+}
+// range循环
+for index,data := range a {
+  fmt.Println(index,data)
+}
 
 // 切片 可变长数组
 var b = []string{"1","2","3"}
 b := []string{"1","2","3"}
 b = b.append(b,"4")
+bs = b[1:2]		// q'w
 // for循环遍历数组
 for k, v := range b {
     fmt.Println(k, v)
@@ -155,10 +170,3 @@ func main() {
     // {fzf 20}
 }
 ```
-
-## 时间
-
-```go
-
-```
-
