--- a/Web/3.JS/31-TS入门.md
+++ b/Web/3.JS/31-TS入门.md
@@ -8,6 +8,7 @@ sort:
 > [在线TS编译运行](https://www.tslang.cn/play/index.html)
 
 ```bash
+# 在node项目中使用ts
 yarn add typescript
 yarn tsc filename.ts --watch
 ```
@@ -76,8 +77,13 @@ let res = add(30, 20);
 function add(x:number, y:number=10, z?:number):number {
   return x + y + (z ? z : 0);
 }
-// s
-...ags:number[]
+// 更多参数
+...args:number[]
+
+// 箭头函数	传参	f
+let getArray = (value:any, items:number = 5):any[]=>{
+  return new Array(items).fill(value);
+};
 ```
 
 ## 接口
