🚕 Captcha & Taro & Redux

--- a/Golang/04-常用库.md
+++ b/Golang/04-常用库.md
@@ -33,6 +33,69 @@ func InitConfig() {
 }
 ```
 
+## base64Captcha
+
+> 图形验证码
+
+```go
+package captcha
+
+import (
+	"log"
+
+	"github.com/mojocn/base64Captcha"
+)
+
+var store base64Captcha.Store
+
+/**
+ * @description: 初始化验证码模块
+ * @param {*}
+ * @return {*}
+ */
+func InitCaptcha() base64Captcha.Store {
+	store = base64Captcha.DefaultMemStore
+	return store
+}
+
+/**
+ * @description: 生成验证码
+ * @param {*}
+ * @return {*}
+ */
+func GenerateCaptcha() (string, string) {
+	driver := base64Captcha.DriverString{
+		Length: 4,
+		Source: "1234567890qwertyuioplkjhgfdsazxcvbnm",
+		Width:  160,
+		Height: 60,
+	}
+	captcha := base64Captcha.NewCaptcha(&driver, store)
+	captId, captBase64, err := captcha.Generate()
+
+	if err != nil {
+		log.Fatal("Captcha Generate Error: ", err)
+	}
+	return captId, captBase64
+}
+
+/**
+ * @description:验证验证码
+ * @param {string} captId
+ * @param {string} captValue
+ * @return {*}
+ */
+func VerifyCaptcha(captId string, captValue string) bool {
+	if len(captId) == 0 || len(captValue) == 0 {
+		return false
+	}
+	return store.Verify(captId, captValue, true)
+}
+
+```
+
+
+
 ## Gorm2
 
 > 快速入门
