--- a/Web/5.React/09-实战.md
+++ b/Web/5.React/09-实战.md
@@ -3,10 +3,24 @@ title: 09-实战
 sort: 
 --> 
 
-## id锚点滚动
+### id锚点滚动
 
-```
-let item = document.getElementById('demo')
+> 将页面滚动至该元素位置
+
+```react
+c item = document.getElementById('demo')
 if (item) { item.scrollIntoView() }
+```
+
+### 元素是否展示
+
+```react
+{
+  isActive
+  : 
+  <p>show</p>
+  ?
+  <p>no show</p>
+}
 ```
 
