🚀 运放 & Rust & Kotlin & pm2

--- a/HardWare/Theory/02-RC电路.md
+++ b/HardWare/Theory/02-RC电路.md
@@ -1,15 +1,7 @@
 <!-- 
-title: 基本电路
+title: 02-RC电路
 sort: 
 --> 
-
-### 三极管放大器
-
-![image-20210622203336520](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203336.png)
-
-![image-20210622203350044](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203350.png)
-
-![image-20210622203414137](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203414.png)
 
 ### RC电路
 
