--- a/Linux/06-文件操作.md
+++ b/Linux/06-文件操作.md
@@ -69,3 +69,13 @@ touch dir-{00{1..9},0{10..99},100}/file-{A..Z}
 - diff
 
   > 差异
+
+- sed
+
+  ```bash
+  # 生成备份文件，并将8080替换为8081
+  sed -i.bak 's/8080/8081/' ./demo
+  
+  ```
+
+  
