🎈 丰富部分内容

--- a/Frame/3-React/09-实战.md
+++ b/Frame/3-React/09-实战.md
@@ -8,13 +8,22 @@ sort:
 > 将页面滚动至该元素位置
 
 ```react
-c item = document.getElementById('demo')
+const item = document.getElementById('demo')
 if (item) { item.scrollIntoView() }
 ```
 
 ### 元素是否展示
 
 ```react
-
+// 方法1
+{ 
+  isActive ?
+  <p>Show</p> :
+	<p>Hide</p>
+}
+// 方法2
+style={{
+	display: isActive ? 'none' : '',
+}}
 ```
 
