--- a/Web/2-CSS/14-弹性布局.md
+++ b/Web/2-CSS/14-弹性布局.md
@@ -4,8 +4,12 @@ sort:
 --> 
 
 > `display: flex;`
+>
+> `display: grid;`
 
-## 父容器
+## Flex布局
+
+### 父容器
 
 ```scss
 // 排列反向
@@ -31,7 +35,7 @@ stretch | flex-start | flex-end | center |
 space-between | space-around | space-evenly | baseline 
 ```
 
-## 子项目
+### 子项目
 
 ```scss
 order: 			// 顺序
@@ -44,4 +48,49 @@ align-self：
 auto | flex-start | flex-end | center | stretch | baseline
 ```
 
-![123](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210409202913.png)
+### 实例
+
+```css
+/* 居中对齐 */
+display:flex;
+justify-content:center;
+align-items:center;
+
+/* 导航栏 */
+display       : flex;
+flex-direction: row;
+flex-wrap     : wrap;
+justify-content: space-between;
+```
+
+## Grid布局
+
+```scss
+display: grid;
+
+// 垂直排列
+grid-template-rows: 10rem 10rem;
+// 水平排列
+grid-template-columns: 10rem 20% 1f;
+
+// 间距
+row-gap: 2rem;
+column-gap: 2rem;
+// 简写
+grid-gap: 2rem 2rem;
+
+// 相对父容器对齐
+justify-content:center;
+align-content: center;
+
+// 子元素对齐
+justify-items: center;	// 水平对齐
+align-items: center;		// 垂直对齐
+
+// 子元素操作
+.item:nth-child(2) {
+	justify-self: start;
+	align-items: start;
+}
+```
+
