🛒 Rust & Go-Zero

--- a/DeepLearn/30-强化学习.md
+++ b/DeepLearn/30-强化学习.md
@@ -1,5 +1,5 @@
 <!-- 
-title: 07-强化学习
+title: 30-强化学习
 sort: 
 --> 
 
@@ -11,7 +11,7 @@ import time
 sizes = 6				# 终点的距离
 # 行动方式
 actions = ['left','right']
-less = 0.9			# 衰减奖励
+less = 0.9			# 按照价值决定行为的概率
 lr = 0.1				# 学习速率
 discount = 0.9	# 折扣因子
 rounds = 13			# 最大回合
@@ -30,7 +30,7 @@ def build_q_table(sizes, actions):
 def choose_action(state, q_table):
   # 取出对应行的全部数据
   state_actions = q_table.iloc[state,:]
-  # 假如随机值大于less 或 action全为0 随机选择action
+  # 假如随机值大于 less 或 action 全为 0 随机选择 action
   if (np.random.uniform() > less) or ((state_actions == 0).all()):
     action_name = np.random.choice(actions)
   else:
@@ -52,7 +52,7 @@ def get_env_feedback(state, action):
   else:
     reward = 0
     if state == 0:
-      next_state = state  # reach the wall
+      next_state = state  # 是否到边缘
     else:
       next_state = state - 1
   return next_state, reward
@@ -100,6 +100,6 @@ def rl():
 
 if __name__ == "__main__":
 	q_table = rl()
-  print(q_tabel)
+  print(q_tabl)
 ```
 
