🎈 开始更新，不摸鱼了

--- a/Lang/Golang/01-Go入门.md
+++ b/Lang/Golang/01-Go入门.md
@@ -104,6 +104,10 @@ items["mid"] = 2
 items["last"] = 4
 // 删除键值对 
 delete(items, "mid")
+// 快速创建
+payload := map[string]interface{}{
+  "UserName": req.UserName,
+}
 // 遍历
 for k, v := range items {
     fmt.Println(k, v)
