--- a/Lang/Golang/02-Go进阶.md
+++ b/Lang/Golang/02-Go进阶.md
@@ -49,6 +49,17 @@ I'm death
 */
 ```
 
+### 断言
+
+```go
+// 中间件将用户信息写入上下文
+c.Set("user", &user)
+// 获得用户信息
+user, _ := c.Get("user")
+// 断言 interface{} 用 model.User 解析
+user.(*model.User).UserName
+```
+
 ## 线程
 
 ```go
