--- a/Lang/Golang/04-标准库.md
+++ b/Lang/Golang/04-标准库.md
@@ -3,6 +3,23 @@ title: 04-标准库
 sort: 
 --> 
 
+## Flag
+
+> 获取命令行参数
+
+```go
+var addr = flag.String("addr", ":8080", "http service address")
+
+func main() {
+  // 解码
+	flag.Parse()
+  // h
+	err := http.ListenAndServe(*addr, nil)
+}
+```
+
+
+
 ## Log
 
 ```go
