--- a/Lang/Golang/05-第三方库.md
+++ b/Lang/Golang/05-第三方库.md
@@ -196,7 +196,9 @@ if err != nil {
 	})
 	r.Run() // listen and serve on 0.0.0.0:8080
 }
-name := ctx.PostForm("name")
+name := c.Query("lastname")		// Get参数
+name := ctx.PostForm("name")	// from-data参数
+
 ```
 
 ## bcypt
