--- a/Home/大一总结.md
+++ b/Home/大一总结.md
@@ -9,7 +9,7 @@ visible: true
 
   > [我的官网](https://www.fzf404.top/)
 
-  <iframe src="https://www.fzf404.top/"></iframe>
+  <iframe src="https://www.fzf404.top/" width="80%" height="500px"></iframe>
 
 - Bootstrap + Jquery
 
@@ -59,7 +59,7 @@ visible: true
               )
   ```
   
-  <iframe src="https://favor.fzf404.top/"></iframe>
+  <iframe src="https://favor.fzf404.top/" width="80%" height="500px"></iframe>
 
 
 - React + Taro
