--- a/Home/大一总结.md
+++ b/Home/大一总结.md
@@ -7,36 +7,44 @@ visible: true
 
 - 前端三件套
 
-  > [我的官网](https://www.fzf404.top/)
-
-  <iframe src="https://www.fzf404.top/" width="80%" height="500px"></iframe>
+  > [我的首页](https://www.fzf404.top/)
+  >
+  > [新首页-施工中](https://pre.fzf404.top/)
 
 - Bootstrap + Jquery
 
-  ![](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210410204945.png)
+  > [前后端源码](https://gitee.com/nmdfzf404/ql2020kpi)
+
+  <img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210410204945.png" style="zoom: 50%;" />
 
 - Electron
 
   > [CameraHelper](https://github.com/fzf404/CameraHelper)
 
-  ![image-20210921203322939](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212033181.png)
+  <img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212033181.png" alt="image-20210921203322939" style="zoom:50%;" />
 
 - ReactHooks + AntD
 
   > [Tabox](https://tab.fzf404.top/)
+  >
+  > [源码](https://gitee.com/nmdfzf404/company-work01)
 
-  ![image-20210305133016461](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210621104207.png)
+  <img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210621104207.png" alt="image-20210305133016461" style="zoom:50%;" />
 
 - Vue + Bootstrap
 
   > [华夏眼科医院](https://www.huaxiaeye.com/)
+  >
+  > [前后端源码](https://gitee.com/nmdfzf404/company-work01)
 
   ![image-20210921211154380](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212111747.png)
 
 - Vue3 + Vite + NaiveUI
 
   > [作品推荐](http://favor.fzf404.top/)
-
+  >
+  > [源码](https://github.com/fzf404/favor)
+  
   ```js
   // pug模板语法
   .content
@@ -59,7 +67,6 @@ visible: true
               )
   ```
   
-  <iframe src="https://favor.fzf404.top/" width="80%" height="500px"></iframe>
 
 
 - React + Taro
@@ -67,15 +74,23 @@ visible: true
   > 微信小程序
   >
   > 腾讯云开发
+  >
+  > 源码未开放...
   
-  ![](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210602201233.jpg)
+  <img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210602201233.jpg" style="zoom: 67%;" />
+  
+- Three.js
+
+  > [旋转立方体](https://demo.fzf404.top/three.js/)
+  >
+  > [源码](https://github.com/fzf404/demo/tree/main/three.js)
 
 
 ## 后端
 
 - Go + Gin
 
-  > [Opus](https://github.com/fzf404/Opus)
+  > [Opus源码](https://github.com/fzf404/Opus)
 
   ```go
   func Login(ctx *gin.Context) {
@@ -123,11 +138,11 @@ visible: true
 
 - Node + Express
 
-  > [template](https://github.com/fzf404/ExpressTemp)
+  > [Template源码](https://github.com/fzf404/ExpressTemp)
 
 - Node + Nestjs + TypeScript
 
-  > [template](https://github.com/fzf404/nest-template)
+  > [Template源码](https://github.com/fzf404/nest-template)
 
   ```js
   /**
@@ -171,15 +186,17 @@ visible: true
 
 - Python + Django
 
-  > [template](https://github.com/fzf404/DjangoTemp)
+  > [Template源码](https://github.com/fzf404/DjangoTemp)
 
 - WebHooks
 
-  > [WebHooks](https://github.com/fzf404/GoWebHooks)
+  > Golang编写的webhooks部署工具
+  >
+  > [源码](https://github.com/fzf404/GoWebHooks)
 
 - Go + gRPC + Zero
 
-  > [gRPC-Demo](https://github.com/fzf404/go-grpc-demo)
+  > [gPRC-Template源码](https://github.com/fzf404/go-grpc-demo)
   >
   > [go-zero](https://github.com/zeromicro/go-zero)
 
@@ -215,15 +232,46 @@ visible: true
   }
   ```
 
+## 运维
+
 - gin + websocket
 
   > 类似 Vercel 和 宝塔 的服务器应用管理系统
   >
-  > [gin-socket](https://github.com/fzf404/gin-socket)
+  > [gin-socket源码](https://github.com/fzf404/gin-socket)
+
+- K8S
+
+  > 了解一下[K8S](https://note.fzf404.top/#/Command/Server/K8S)
+
+- 尝试了一堆好用的工具
+
+  > i3wm、tmux、nvim...
+  
+- [Shell编程](https://note.fzf404.top/#/Linux/10-Shell%E7%BC%96%E7%A8%8B)
+
 
 ## 其他
 
+### 操作系统
+
+> 用Nasm汇编写操作系统
+>
+> 只写到32位保护模式
+>
+> [MiniSys源码](https://github.com/fzf404/MiniSys)
+
+
+
+![image-20210204214823035](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/image-20210204214823035.png)
+
 ### 机器学习
+
+- OpenCV
+
+  > 简单了解下
+  >
+  > [OpenCV](https://note.fzf404.top/#/Python/7.Vision/50-OpenCV)
 
 - MNIST
 
@@ -276,18 +324,20 @@ visible: true
   > 关键词：`修正主义`
 
   ```
-   修正主义者即反对这种主张的人。他们认为，只要人性不是恶的，人身上就有不可克服的弱点，必须加以克服。
-      反对这种人生虚无主义的人，既没有生命力，也就是死亡的征兆，更谈不到智慧。契诃夫愿意自己的作品有血有肉，有激情，有创造，有欢乐，有悲壮。有这样的属于自己的全部优点的艺术，怎么能够叫做没有意义呢？他在创作自己的作品的时候，从不旁骛自己想要什么结果，也不预备什么结果。他一生只是在创造他自己要创造的那样的属于他自己的特殊的执着的生命，他不为他的生命的没有意义而苦恼，他没有这样的苦恼，因而也就有了创造他要表现的生命不是一般的生命，不是世俗的生命，而是精神的生命。
-      在他出生前，早已有了一些波动，他得先有了这样的生命力，才可能有了他自己。那么，他对现实生活有怎样的感觉呢？他始终是冷静的，顽强的。他的感觉是那样强烈，那样强烈，有时竟至使他顾而不见。他对他不满意这里的一切，但是他永远也不曾像别人指出应该作哪样的改革，或者应该避开哪样的事情。
-      他对人生是始终热爱的，永远是充满着激情的。他甚至在自己给自己的一封信中也写道如果你们想接受我这不同于常人的激情，如果你们想从我这里学习什么东西，请不要犹豫，因为我会给你们想要学习的东西！在这方面，他不仅有着强烈的激情，而且有着坚强的意志。他不相信别人可以骗得了他，他有着致命的决心。他一生致力于他的工作，但他决不向别人低估他的工作的难能可贵。
-      当他充满着激情拥抱着生命时，他是快乐的，是充满着力量的。因此，即使他面对着许多人低估了他的力量时，他充满了力量的自信的面容是会给他们一个致命的打击的。锻炼自己的生命力，即使是不充足的地方，也将给你带来充足的力量。这样的力量足以战胜任何困难。
-      苦闷的象征，文艺论文集，日本厨川白村著，一九三三年七月出版。译文月刊，周渊编辑，一九三六年七月创刊于上海，为期一个月。译文社编辑，一九三七年九月创刊于北京，为期十一个月。收入我们的文学集，附录周扬的文学战线编的文学战线的撰稿者和代表。
+  		修正主义者即反对这种主张的人。他们认为，只要人性不是恶的，人身上就有不可克服的弱点，必须加以克服。
+  		反对这种人生虚无主义的人，既没有生命力，也就是死亡的征兆，更谈不到智慧。契诃夫愿意自己的作品有血有肉，有激情，有创造，有欢乐，有悲壮。有这样的属于自己的全部优点的艺术，怎么能够叫做没有意义呢？他在创作自己的作品的时候，从不旁骛自己想要什么结果，也不预备什么结果。他一生只是在创造他自己要创造的那样的属于他自己的特殊的执着的生命，他不为他的生命的没有意义而苦恼，他没有这样的苦恼，因而也就有了创造他要表现的生命不是一般的生命，不是世俗的生命，而是精神的生命。
+  		在他出生前，早已有了一些波动，他得先有了这样的生命力，才可能有了他自己。那么，他对现实生活有怎样的感觉呢？他始终是冷静的，顽强的。他的感觉是那样强烈，那样强烈，有时竟至使他顾而不见。他对他不满意这里的一切，但是他永远也不曾像别人指出应该作哪样的改革，或者应该避开哪样的事情。
+  		他对人生是始终热爱的，永远是充满着激情的。他甚至在自己给自己的一封信中也写道如果你们想接受我这不同于常人的激情，如果你们想从我这里学习什么东西，请不要犹豫，因为我会给你们想要学习的东西！在这方面，他不仅有着强烈的激情，而且有着坚强的意志。他不相信别人可以骗得了他，他有着致命的决心。他一生致力于他的工作，但他决不向别人低估他的工作的难能可贵。
+  		当他充满着激情拥抱着生命时，他是快乐的，是充满着力量的。因此，即使他面对着许多人低估了他的力量时，他充满了力量的自信的面容是会给他们一个致命的打击的。锻炼自己的生命力，即使是不充足的地方，也将给你带来充足的力量。这样的力量足以战胜任何困难。
+  		苦闷的象征，文艺论文集，日本厨川白村著，一九三三年七月出版。译文月刊，周渊编辑，一九三六年七月创刊于上海，为期一个月。译文社编辑，一九三七年九月创刊于北京，为期十一个月。收入我们的文学集，附录周扬的文学战线编的文学战线的撰稿者和代表。
   ```
 
 - RL强化学习
 
+  > 大概了解了下
+  >
   > [强化学习走迷宫](https://github.com/fzf404/Old_Code/tree/main/Python/RL/maze)
-  
+
   ![image-20210922210015748](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109222100783.png)
 
 - 目标跟踪
@@ -306,15 +356,15 @@ visible: true
 
 > Qt5写的XP扫雷外挂
 
-![image-20210504113307955](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504113309.png)
+<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504113309.png" alt="image-20210504113307955" style="zoom:80%;" />
 
-![](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504112935.png)
+<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504112935.png" style="zoom:80%;" />
 
 ### 安卓
 
 > 一个老师的项目，500块钱
 
-<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212223132.jpg" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212223132.jpg" alt="img" style="zoom: 50%;" />
 
 ### 硬件
 
