--- a/Home/大一总结.md
+++ b/Home/大一总结.md
@@ -188,12 +188,6 @@ visible: true
 
   > [Template源码](https://github.com/fzf404/DjangoTemp)
 
-- WebHooks
-
-  > Golang编写的webhooks部署工具
-  >
-  > [源码](https://github.com/fzf404/GoWebHooks)
-
 - Go + gRPC + Zero
 
   > [gPRC-Template源码](https://github.com/fzf404/go-grpc-demo)
@@ -234,9 +228,17 @@ visible: true
 
 ## 运维
 
+- WebHooks
+
+  > Golang编写的webhooks部署工具
+  >
+  > [源码](https://github.com/fzf404/GoWebHooks)
+
 - gin + websocket
 
   > 类似 Vercel 和 宝塔 的服务器应用管理系统
+  >
+  > 前后端自动化部署、webhooks、CI/CD
   >
   > [gin-socket源码](https://github.com/fzf404/gin-socket)
 
@@ -249,7 +251,6 @@ visible: true
   > i3wm、tmux、nvim...
   
 - [Shell编程](https://note.fzf404.top/#/Linux/10-Shell%E7%BC%96%E7%A8%8B)
-
 
 ## 其他
 
