--- a/Home/大一总结.md
+++ b/Home/大一总结.md
@@ -234,6 +234,10 @@ visible: true
   >
   > [源码](https://github.com/fzf404/GoWebHooks)
 
+- Nginx、Tomcat、SQL等基础搭建
+
+- Docker
+
 - gin + websocket
 
   > 类似 Vercel 和 宝塔 的服务器应用管理系统
