🎨 Excel & pyMap & MkDoc

--- a/Python/3.Package/10-常用第三方模块.md
+++ b/Python/3.Package/10-常用第三方模块.md
@@ -2,6 +2,7 @@
 title: 10-常用第三方模块
 sort: 
 --> 
+
 # Python常用第三方模块
 
 ## pillow
@@ -121,5 +122,30 @@ def job():
 scheduler = BlockingScheduler()
 scheduler.add_job(job, 'cron', day_of_week='1-5', hour=6, minute=30) 
 scheduler.start()
+```
+
+## openpyxl
+
+> 操纵Excel表格
+
+```python
+from openpyxl import load_workbook
+
+# 加载表格
+template = load_workbook('xxx.xlsx')
+# 激活
+work = template.active
+# 修改值
+work['B2'] = 1234
+# 保存
+template.save('xxx.xlsx')
+
+# 复制sheet
+template.copy_worksheet(template.worksheets[0])
+# 改名
+sheet.title = 'Sheet2'
+
+# 删除sheet
+del template1["Sheet1"]
 ```
 
