🀄️ VPN & Ajax % Net

--- a/Linux/08-网络.md
+++ b/Linux/08-网络.md
@@ -48,9 +48,16 @@ scp -r username@ip:path path
 ## New
 
 ```bash
+# 网络信息
 ip addr|route|link
-ss
-lsof -i:9000	# 查看9000d
+
+# 已占用端口
+ss -tnlp
+
+# 列出符合条件的进程
+lsof -i:8080 # 占用8080端口的进程
+
+# 图形化配网
 nmtui
 ```
 
