--- a/Linux/02-基础命令.md
+++ b/Linux/02-基础命令.md
@@ -3,110 +3,105 @@ title: 02-基础命令
 sort: 
 --> 
 
-## 帮助
+## 权
 
-- type———显示命令类型
+## 限
 
-- which——显示可执行程序的位置
+```bash
+id # 显示用户身份
 
-- help———得到内建函数的帮助文档
+chmod <path> # 管理权限
+    -R # 递归增加
+    755 # 4+2+1 读|写|运行
+    +x # 所有用户增加运行权限
+    o-x # 其他用户减去运行权限
+    # u g o a 当前用户|当前组|其他用户|全部用户
 
-  > `--help`显示用法信息
+chmod user:group # 更改文件所有者及组别
+chgrp user:group # 更改文件所有组
+    -R # 递归修改
+```
 
-- apropos——模糊命令搜索
+## 用户管理
 
-- man———显示程序手册
+```bash
+who # 显示已登录用户
 
-- whatis——简洁的命令说明
+su <user_name> # 切换用户
 
-- alias———创建别名
+passwd # 修改密码
+sudo passwd # 修改管理员密码
+```
 
-## 重定向
+## 操作符
 
-> `> clean.txt`：清空文件
->
-> `&> output.txt`：标准错误重定向
->
-> `2> /dev/null`：错误信息放到垃圾桶
->
-> >  2是标准错误重定向
+```bash
+# 重定向
+> # 覆盖
+>> # 追加
 
-- cat———连接文件
+# 正确信息重定向
+> success.log
+# 错误信息重定向
+2> error.log
+# 全部重定向到同一个文件
+>all.log 2>&1
 
-  > `cat > out.txt`
-  >
-  > `Some Text <Ctrl+D>`
+# 例子
+echo "Some Text" > hello.txt
+cat hello.txt
+echo "Some Text2" > hello.txt
+cat hello.txt
+echo "Some Text3" >> hello.txt
+cat hello.txt
 
-- | ————管道
+# 管道
+|
 
-  > 将一个命令的输入作为下一个命令的输出
-  >
-  > `ll xx | less`
+# 例子
+ls -l / | grep bin # 在根目录搜索bin
+```
 
-- sort
 
-  > `ls /bin /usr/bin | sort | less`
 
-- wc———行数 单词数 字节数
+## 通配符
 
-  > -c	byte
-  >
-  > -m	character
-  >
-  > -l	lines
-  >
-  > -w	words
-  >
-  > -L	MAX_LEN
+```bash
+`*`：匹配任意多个字符
 
-- grep———打印匹配行
+`?`：匹配任意单个字符
 
-  > -i	ignore
-  >
-  > -v	打印不匹配的行
+`[char]`：匹配任意字符集中的字符
 
-- head、tail—打印开头、结尾
+# 例子
 
-  > -n	行数
-  >
-  > tail -f 实时预览
+`[[:!digit:]]*`：不已数字开头的文件
 
-- tee———中转
+`*[[:lower:]123]`：已小写字母或123结尾的文件
+```
 
-  > 输出到文件并沿着管道向下
-  >
-  > `ll /usr/bin | tee ls.txt | grep zip`
+## 运行
 
-## Shell
+```bash
+# 后台运行
+<commond> & # 当前终端后台执行
+# 后台任务
+jobs -l
+# 取出后台任务
+fg $1
+# 任务放置后台
+Ctrl + Z
+# 系统后台运行
+nohup <command> & 
 
-- `echo 1+1=$((1+1))`
+# 停止
+kill <sigle> <uid>
+| ---- | ---- | --------------------------------- |
+| 1    | HUP  | 挂起                              |
+| 2    | INT  | Ctrl-c                            |
+| 9    | KILL | 内核立即终止它                    |
+| 15   | TERM | 默认信号,程序仍然运行接收到会停止 |
+| 18   | CONT | 继续运行                          |
+| 19   | STOP | 停止运行                          |
+```
 
-  > 算数表达式展开
-  
-- `echo Number_{0..9}{Z..A}`
-
-  > 花括号展开
-
-- `echo $(ls)`
-
-  > 将命令的输出展开为输入使用
-  >
-  > `ls -l $(which docker)`
-
-- `echo $HOME`
-
-  > 显示名为HOME的常量
-  >
-  > `set | less`：显示所有已定义的常量
-
-- 符号
-
-  > `""`：特殊字符失去含义，除去`/$''`
-  >
-  > `''`：全部特殊字符失去含义
-  >
-  > `echo "SomeText $(pwd) $((1+1))"`：$会展开
-  >
-  > `echo 'SomeText $(pwd) $((1+1))'`：输出字符串
-  >
-  > `\`：使用转义符阻止展开
