✍ 整理前端基础笔记

--- a/Linux/02-基础命令.md
+++ b/Linux/02-基础命令.md
@@ -17,8 +17,9 @@ chmod <path> # 管理权限
     o-x # 其他用户减去运行权限
     # u g o a 当前用户|当前组|其他用户|全部用户
 
-chmod user:group # 更改文件所有者及组别
-chgrp user:group # 更改文件所有组
+chown user:group <file> # 更改文件所属用户|用户组
+    -R # 递归修改
+chgrp group <file> # 更改文件所有组
     -R # 递归修改
 ```
 
@@ -27,9 +28,21 @@ chgrp user:group # 更改文件所有组
 ```bash
 who # 显示已登录用户
 
-su <user_name> # 切换用户
+# 新建|删除|修改 用户
+useradd
+userdel
+usermod
 
-passwd # 修改密码
+# 新建|删除|修改 用户组
+groupadd
+groupdel
+groupmod
+
+# 切换用户
+su <user_name> 
+
+# 修改密码
+passwd 
 sudo passwd # 修改管理员密码
 ```
 
