--- a/Linux/04-网络.md
+++ b/Linux/04-网络.md
@@ -8,6 +8,10 @@ sort:
 ```bash
 # ssh远程连接
 ssh user@ip
+# 使用私钥登录
+ssh -i <path> user@ip
+# private key
+chmod 400 id_rsa
 
 # 互传文件
 scp -r <user>@<ip>:<source> <target> # 递归拷贝远程
