--- a/Linux/05-文件系统.md
+++ b/Linux/05-文件系统.md
@@ -9,18 +9,6 @@ sort:
 
 > Linux文件结构
 
-| Folder | Introduce                                                    |
-| ------ | ------------------------------------------------------------ |
-| /bin   | System Start or Run Program<br />- `/boot/grub/grub.cfg`: System Start config<br />- `/boot/vmlinuz` |
-| /dev   | All Device List                                              |
-| /etc   | Config or Script<br />- `/etc/anacrontab`: Auto Run Task<br />- `/etc/fstab`: Storage Device List<br />- `/etc/passwd`: User Account |
-| /lib   | Core Program Share Lib                                       |
-| /mnt   | Media Mount Point                                            |
-| /opt   | SoftWare                                                     |
-| /proc  | Virtual File                                                 |
-| /usr   | User Normal File or Program                                  |
-| /var   | SoftWare                                                     |
-
 ### var
 
 > 应用程序目录
@@ -33,9 +21,9 @@ var
 └── null # 黑洞
 ```
 
-
-
 ### dev
+
+> 设备
 
 ```bash
 dev
@@ -43,14 +31,14 @@ dev
 └── null # 黑洞
 ```
 
-
-
 ## 文件操作
 
 ```bash
 # 查看文件内容
 cat 
   -ns # 显示行号 |不显示连续空行
+nl # 显示行号
+more # 文本浏览器
   
 # 排序
 sort
