--- a/Web/1-HTML/00-快速入门.md
+++ b/Web/1-HTML/00-快速入门.md
@@ -1,9 +1,7 @@
 <!-- 
-title: 00-快速入门
+title: 00-前端快速入门
 sort: 
 --> 
-# 前端快速入门
-
 ## HTML
 
 ```html
@@ -26,6 +24,7 @@ sort:
         color: blue
     }
 </style>
+
 <h2 class="blue">hello</h2>
 <button>按钮</button>
 ```
