--- a/Linux/03-状态监控.md
+++ b/Linux/03-状态监控.md
@@ -3,6 +3,28 @@ title: 03-服务器状态监控
 sort: 
 --> 
 
+## 
+
+## 型号
+
+```bash
+# cpu信息
+cat /proc/cpuinfo
+# 发行版
+cat /proc/version
+```
+
+## 占用
+
+```bash
+top # 动态展示进程信息
+htop # 动态展示进程信息-更好看
+
+free -h # 内存占用
+df -h # 存储空间占用
+du -h # 文件详细占用
+```
+
 ## 进程
 
 ```bash
@@ -35,16 +57,5 @@ ps aux # 更多信息
 
 # 例子
 ps -ef | grep <>
-```
-
-## 占用信息
-
-```bash
-top # 动态展示进程信息
-htop # 动态展示进程信息-更好看
-
-free -h # 内存占用
-df -h # 存储空间占用
-du -h # 文件详细占用
 ```
 
