🧠 WebSocket & Python & 整理笔记

--- a/Linux/01-常用命令.md
+++ b/Linux/01-常用命令.md
@@ -50,6 +50,9 @@ find <path> -name <file> # 计算机内搜索内容
   -size # 大小
     +15K # 大于15KB
     -1M # 小于1MB
+  -type # 文件类型
+  -exec # 对搜索出的文件运行命令
+    rm {} \; # 删除
 
 # 归档及压缩
 gzip -d # 解压缩
