--- a/Linux/07-服务管理.md
+++ b/Linux/07-服务管理.md
@@ -37,6 +37,9 @@ systemcrl restart service
 # 重载services
 systemctl daemon-reload 
 
+# 服务状态
+systemctl status <service>
+
 # 查看日志
 journalctl -u <service>
 
