--- a/Python/2.Advance/09-常用内置库.md
+++ b/Python/2.Advance/09-常用内置库.md
@@ -2,7 +2,28 @@
 title: 09-常用内置库
 sort: 
 --> 
-# Python常用内置库
+
+
+
+## logging
+
+> 日志库
+
+```python
+# 日志格式化方式
+LOG_FORMAT = "%(asctime)s - %(levelname)s - %(message)s"
+DATE_FORMAT = "%Y/%m/%d %H:%M"
+
+# 配置日志文件
+logging.basicConfig(filename='info.log', level=logging.INFO,
+                    format=config.LOG_FORMAT, datefmt=config.DATE_FORMAT)
+logging.basicConfig(filename='warning.log', level=logging.WARNING,
+                    format=config.LOG_FORMAT, datefmt=config.DATE_FORMAT)
+
+# 写入日志
+logging.info(f'{user_name}: {message}')
+logging.warning(f'{user_name}: {message}')
+```
 
 ## argparse
 
@@ -534,6 +555,4 @@ source = f.read()
 # 小端+2个+int
 struct.unpack('>4i',source)
 ```
-
-## logging
 
