--- a/Security/Crack/01-基础知识.md
+++ b/Security/Crack/01-基础知识.md
@@ -20,6 +20,8 @@ sort:
 
 ## 寄存器
 
+<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202111301535147.jpg" alt="图片" style="zoom: 67%;" />
+
 - **32位通用寄存器**
 
   | 寄存器 | 主要用途                             | 编号 | 存储数据的范围 |
@@ -47,7 +49,7 @@ sort:
   | ------ | ---------------------------------------------- |
   | CS     | 代码段寄存器，指向包含程序指令的段。           |
   | SS     | 栈段寄存器，指向包含当前程序栈的段。           |
-  | DS     | 数据段寄存器，指向包含静态数据或者全局数据段。 |
+  | DS     | 数据段寄存器，此后的所有地址都作为此地址的偏移 |
   | ES     | 附加段寄存器，串操作指令中目的串所在的段。     |
 
 - 指令指针寄存器
