--- a/Home/大一总结.md
+++ b/Home/大一总结.md
@@ -251,7 +251,7 @@ visible: true
 
   > i3wm、tmux、nvim...
 
-- [Shell 编程](https://note.fzf404.top/#/Linux/10-Shell%E7%BC%96%E7%A8%8B)
+- [Shell 编程](https://note.fzf404.top/#/Command/Linux/10-Shell%E7%BC%96%E7%A8%8B)
 
 ## 其他
 
