--- a/Command/Linux/05-文件系统.md
+++ b/Command/Linux/05-文件系统.md
@@ -56,6 +56,9 @@ sed -i.bak 's/80/8080/g' nginx.conf
 mkdir -p dir-{00{1..9},0{10..99},100}
 # 文件夹内批量新建文件 file-A/Z
 touch dir-{00{1..9},0{10..99},100}/file-{A..Z}
+
+# 排序并查重
+sort -k2n data.csv | uniq > tmp.csv
 ```
 
 ## 环境变量
