--- a/Web/3-JS/21-JS操作.md
+++ b/Web/3-JS/21-JS操作.md
@@ -17,6 +17,9 @@ id_demo.style.color = "#ff0000"; // 改变样式
 
 // 跳转
 window.location.href = "www.baidu.com";
+
+// 改变根节点的属性
+document.documentElement.setAttribute('class', theme.value)
 ```
 
 ## 事件
@@ -45,5 +48,3 @@ window.location.href = "www.baidu.com";
 | onmouseout  | 用户从一个 HTML 元素上移开鼠标 |
 | onkeydown   | 用户按下键盘按键               |
 | onload      | 浏览器已完成页面的加载         |
-
-##
