--- a/Lang/Golang/02-Go进阶.md
+++ b/Lang/Golang/02-Go进阶.md
@@ -3,6 +3,30 @@ title: 02-Go进阶
 sort:
 -->
 
+## 函数
+
+```go
+// 先于 main 执行
+// 每个包、源文件都可以有多个 init 函数
+fun init(){}
+
+// 凶残的匿名函数
+writeDataFn := func() {
+  var data []int // 往 slice 里 写100 个数；
+  for i := 0; i < 100; i++ {
+   data = append(data, i)
+  }
+  atomic.StorePointer(&shareBufPtr, unsafe.Pointer(&data)) // 写完后，将共享缓存的指针指向它；
+ }
+
+ readDataFn := func() {
+  data := atomic.LoadPointer(&shareBufPtr)
+  fmt.Println(data, *(*[]int)(data)) // 打印共享缓存里的值
+ }
+```
+
+
+
 ## 接口
 
 > 将不同类型中相同的方法定义在一起
