🍻 PWA & Next.js

--- a/Command/Linux/04-网络.md
+++ b/Command/Linux/04-网络.md
@@ -57,6 +57,11 @@ lsof -i:8080 # 占用8080端口的文件
 ```bash
 # 图形化配网
 nmtui
+
+# 修改网络信息
+# ubuntu
+vim /etc/netplan/xxx.yaml
+netplan apple # 生效
 ```
 
 ## 请求
