🍭 修复部分链接

--- a/Command/Linux/08-实用工具.md
+++ b/Command/Linux/08-实用工具.md
@@ -22,6 +22,11 @@ crontab -e
 |    |    +--------------- 一个月中的第几天 (1 - 31)
 |    +-------------------- 小时 (0 - 23)
 +------------------------- 分钟 (0 - 59)
+
+# ubuntu 开启日志
+vim /etc/rsyslog.d/50-default.conf
+# cron.* /var/log/cron.log
+service rsyslog restart
 ```
 
 ## At
