📖 增加部分工具

--- a/Command/Linux/05-文件系统.md
+++ b/Command/Linux/05-文件系统.md
@@ -44,6 +44,7 @@ sort
 
 # 显示文件差异
 diff <source> <target>
+vimdiff <source> <target>
 
 # 文件替换
 sed
@@ -59,6 +60,12 @@ touch dir-{00{1..9},0{10..99},100}/file-{A..Z}
 
 # 排序并查重
 sort -k2n data.csv | uniq > tmp.csv
+
+# md5 验证
+md5sum <file>
+
+# 合并文件内容
+paste
 ```
 
 ## 环境变量
