--- a/Command/Linux/08-实用工具.md
+++ b/Command/Linux/08-实用工具.md
@@ -49,3 +49,14 @@ atq
 # 删除任务
 atrm <task_id>
 ```
+
+## Bc
+
+> 科学计算工具
+
+```bash
+# 单核压力测试
+# 计算 pi 1000 位
+echo "scale=1000; a(1)*4" | bc -l
+```
+
