--- a/Python/3.Package/10-常用第三方模块.md
+++ b/Python/3.Package/10-常用第三方模块.md
@@ -115,12 +115,14 @@ for i in trange(10):
 ```python
 from apscheduler.schedulers.blocking import BlockingScheduler
 from datetime import datetime
+
 # 输出时间
 def job():
     print(datetime.now().strftime("%Y-%m-%d %H:%M:%S"))
+    
 # BlockingScheduler
 scheduler = BlockingScheduler()
-scheduler.add_job(job, 'cron', day_of_week='1-5', hour=6, minute=30)
+scheduler.add_job(job, 'cron', hour=6, minute=30)
 scheduler.start()
 ```
 
